Add --include-hidden for :config-diff
Needed it for debugging, so why not implement it properly.
TODO: Changelog, pick to master?

--- a/doc/help/commands.asciidoc
+++ b/doc/help/commands.asciidoc
@@ -337,7 +337,12 @@ Remove a key from a dict.
 
 [[config-diff]]
 === config-diff
+Syntax: +:config-diff [*--include-hidden*]+
+
 Show all customized options.
+
+==== optional arguments
+* +*-i*+, +*--include-hidden*+: Also include internal qutebrowser settings.
 
 [[config-edit]]
 === config-edit
