--- a/doc/changelog.asciidoc
+++ b/doc/changelog.asciidoc
@@ -62,6 +62,16 @@ Fixed
 - When the devtools are clicked but `input.insert_mode.auto_enter` is set to
   `false`, insert mode now isn't entered anymore.
 
+[[v2.5.2]]
+v2.5.2 (unreleased)
+-------------------
+
+Fixed
+~~~~~
+
+- The `install` and `stacktrace` help pages are now included in the docs
+  shipped with qutebrowser when using the recommended packaging workflow.
+
 [[v2.5.1]]
 v2.5.1 (2022-05-26)
 -------------------
