--- a/doc/changelog.asciidoc
+++ b/doc/changelog.asciidoc
@@ -28,6 +28,7 @@ Added
   external file selector (`fileselect.folder.command`) from download filename
   prompts (bound to `<Alt+e>` by default).
 - New `clock` value for `statusbar.widgets`, displaying the current time.
+- New `qute://start` built-in start page (not set as the default start page yet).
 - New `qute-1pass` userscript using the 1password commandline to fill
   passwords.
 - New features in userscripts:
