--- a/doc/changelog.asciidoc
+++ b/doc/changelog.asciidoc
@@ -84,6 +84,7 @@ Changed
   To show rich text with `:message-*` commands, use their new `--rich` flag.
   Note this is NOT a security issue, as only a small subset of HTML is
   interpreted as rich text by Qt, independently from the website.
+- Improved output when loading Greasemonkey scripts.
 
 Fixed
 ~~~~~
@@ -116,6 +117,10 @@ Fixed
   messages, while the 3.0.0 release will change the default for all messages to be
   plain-text. Note this is NOT a security issue, as only a small subset of HTML
   is interpreted as rich text by Qt, independently from the website.
+- When a Greasemonkey script couldn't be loaded (e.g. due to an unreadable file),
+  qutebrowser would crash. It now shows an error instead.
+- New site-specific quirk to fix messages not showing on LinkedIn (due to
+  `Array.at` usage).
 
 [[v2.5.1]]
 v2.5.1 (2022-05-26)
