--- a/doc/install.asciidoc
+++ b/doc/install.asciidoc
@@ -296,11 +296,11 @@ Nightly builds
 ~~~~~~~~~~~~~~
 
 If you want to test out new features before an official qutebrowser release, automated
-https://github.com/qutebrowser/qutebrowser/actions/workflows/bleeding.yml[nightly
+https://github.com/qutebrowser/qutebrowser/actions/workflows/nightly.yml[nightly
 builds] are available. To download them, open the lastest run (usually the first one),
 then download the archive at the bottom of the page. Note that due to GitHub
-limitations, all variants (Windows/macOS, 32/64 bit, debug/non-debug) are contained in a
-single archive.
+limitations, all variants (Windows/macOS, 32/64 bit, debug/non-debug, master/qt6-v2)
+are contained in a single archive.
 
 Those builds also include variants with debug logging enabled, which can be useful to
 track down issues.
@@ -359,11 +359,11 @@ Nightly builds
 ~~~~~~~~~~~~~~
 
 If you want to test out new features before an official qutebrowser release, automated
-https://github.com/qutebrowser/qutebrowser/actions/workflows/bleeding.yml[nightly
+https://github.com/qutebrowser/qutebrowser/actions/workflows/nightly.yml[nightly
 builds] are available. To download them, open the lastest run (usually the first one),
 then download the archive at the bottom of the page. Note that due to GitHub
-limitations, all variants (Windows/macOS, 32/64 bit, debug/non-debug) are contained in a
-single archive.
+limitations, all variants (Windows/macOS, 32/64 bit, debug/non-debug, master/qt6-v2)
+are contained in a single archive.
 
 Those builds also include variants with debug logging enabled, which can be useful to
 track down issues.
