--- a/doc/install.asciidoc
+++ b/doc/install.asciidoc
@@ -488,7 +488,7 @@ PyQt/Qt install instead of installing PyQt in the virtualenv. However, unless
 you have a new QtWebKit or QtWebEngine available, qutebrowser will not work. It
 also typically means you'll be using an older release of QtWebEngine.
 
-On Windows, run `set PYTHON=C:\path\to\python.exe` (CMD) or ``$Env:PYTHON =
+On Windows, run `set PYTHON=C:\path\to\python.exe` (CMD) or `$Env:PYTHON =
 "..."` (Powershell) first.
 
 There is a third mode, `mkvenv.py --pyqt-type source` which uses a system-wide
