Add link to flatpak docs

--- a/doc/install.asciidoc
+++ b/doc/install.asciidoc
@@ -243,7 +243,9 @@ Via Flatpak
 
 qutebrowser is available
 https://flathub.org/apps/details/org.qutebrowser.qutebrowser[on Flathub]
-as `org.qutebrowser.qutebrowser`.
+as `org.qutebrowser.qutebrowser`. See the
+https://github.com/flathub/org.qutebrowser.qutebrowser/wiki[qutebrowser Flatpak documentation]
+for more information about setting up certain features with the Flatpak sandbox.
 
 On FreeBSD
 ----------
