--- a/doc/help/commands.asciidoc
+++ b/doc/help/commands.asciidoc
@@ -30,6 +30,7 @@ possible to run or bind multiple commands by separating them with `;;`.
 |==============
 |Command|Description
 |<<adblock-update,adblock-update>>|Update block lists for both the host- and the Brave ad blocker.
+|<<adblock-update-resources,adblock-update-resources>>|Update resources for the Brave ad blocker.
 |<<back,back>>|Go back in the history of the current tab.
 |<<bind,bind>>|Bind a key to a command.
 |<<bookmark-add,bookmark-add>>|Save the current page as a bookmark, or a specific url.
@@ -143,6 +144,10 @@ possible to run or bind multiple commands by separating them with `;;`.
 [[adblock-update]]
 === adblock-update
 Update block lists for both the host- and the Brave ad blocker.
+
+[[adblock-update-resources]]
+=== adblock-update-resources
+Updates the Brave ad blocker with resources needed for cosmetic filtering and injecting scriptlets.
 
 [[back]]
 === back
