--- a/doc/changelog.asciidoc
+++ b/doc/changelog.asciidoc
@@ -116,6 +116,8 @@ Fixed
   shown, qutebrowser used to only show one message. This is now only done when the
   two messages are completely equivalent (text, level, etc.) instead of doing so
   when only the text matches.
+- The `progress` and `backforward` statusbar widgets now stay removed if you
+  choose to remove them. Previously they would appear again on navigation.
 
 [[v2.5.3]]
 v2.5.3 (unreleased)
