--- a/doc/help/settings.asciidoc
+++ b/doc/help/settings.asciidoc
@@ -3648,6 +3648,8 @@ Mode to change to when focusing on a tab/URL changes.
 
 This setting supports link:configuring{outfilesuffix}#patterns[URL patterns].
 
+This setting can only be set in config.py.
+
 Type: <<types,String>>
 
 Valid values:
